syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.graphoenix.file.grpc";

package io.graphoenix.file;

service GraphQLService {
    rpc Request (GraphQLRequest) returns (GraphQLResponse);
}
message GraphQLRequest {
    string request = 1;
    optional string transaction_id = 2;
}
message GraphQLResponse {
    string response = 1;
}